2008-09-23  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store-summary.c
	(camel_imap_store_summary_init),
	(camel_imap_store_summary_namespace_new),
	(camel_imap_store_summary_namespace_set), (namespace_load),
	(namespace_save):
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store-summary.h:
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c
	(construct), (save_namespace_in_summary), (imap_connect_online): Fix
	saving and loading of namespaces in the summary.

2008-09-16  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c
	(let_idle_die): do a trylock in connect_lock instead of lock, so that
	we can avoid interlocks on stop_idle called from imap_command_start.

2008-09-10  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/local/camel-mailder-store.c
	(scan_dirs): do not free name before using it to notify an
	exception

2008-09-03  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c
	(tny_camel_mime_part_decode_to_stream_async_default): make it really
	asynchronous, doing the operation in a separate thread.

2008-09-03  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(tny_camel_folder_get_msg_async_default),
	(tny_camel_folder_find_msg_async_default):
	* libtinymail-camel/tny-camel-queue-priv.h:
	* libtinymail-camel/tny-camel-queue.c (_tny_camel_queue_has_items):
	* libtinymail-camel/tny-camel-store-account.c
	(_tny_camel_store_account_queue_going_online): do not add a
	message retrieval (with both get_msg_async and find_msg_async) to
	the IMAP store account message retrieval queue when there is a
	pending connection in the account queue.

2008-08-31  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/tny-session-camel.c: Make account_store
	weak-referenced in TnySessionCamel.
